test/expected/rerr_arith_bad_increment.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "$((++))"]
[Word
  Unquoted "echo"
]
[Word
  ArithmeticExpansion "++"
]
shit: 2:6: error: Expected a variable after '++' or '--'.
     2 |  echo $((++))
       |       ^~~~~~~ here.
note: '++' and '--' step a variable, not a value.
